# QanYiCat

./: .gitignore  KillQQ.bat  README.md  build-injector.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qanyicat.example.config.json  quick-start.bat  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
docs/: linux-port-plan.md
examples/echo-bot/: README.md  index.mjs
tools/: README.md  bump-version.mjs  drive-user.mjs  release.mjs  smoke-client.mjs  smoke-dual-stack.mjs  smoke-ob12.mjs
tools/echo-bot/: index.mjs
tools/file-watcher/: index.mjs
tools/group-archive/: index.mjs
tools/qanyicat-injector/: Cargo.toml  README.md  rust-toolchain.toml
tools/qanyicat-injector/qanyicat-hook/: Cargo.toml
tools/qanyicat-injector/qanyicat-hook/src/: lib.rs
tools/qanyicat-injector/qanyicat-launcher/: Cargo.toml
tools/qanyicat-injector/qanyicat-launcher/src/: main.rs
tools/qq-loader/: index.cjs
tools/smoke/: live-curl.mjs
tools/test-fixtures/: v04h-base64.json  v04h-delta-video-group.json  v04h-delta-video.json  v04h-delta-voice.json  v04h-file-send.json  v04h-image-send.json  v04h-polish-gif.json  v04k-friend-probe.json  v04k-sendreq.json  v04m-forward-fake-cq.json  v04m-forward-fake.json  v04m-forward-group.json  v04m-forward-private.json  v04o-set-friend-accept.json  v04o-set-group-accept.json
tools/ws-tail/: index.mjs  ws-smoke.mjs
