[workspace]
resolver = "3"
members = [
    "qanyicat-launcher",
    "qanyicat-hook",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["QanYiCat"]
publish = false

[workspace.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
